--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     margin: 0px;
     background-color: var(--main-color);
     color: white;
+    font-family:'Poppins',Arial, Helvetica, sans-serif;
+    height: 100%;
 }
 a{
     color:var(--accent-color);
@@ -15,35 +17,80 @@ a{
 }
 
 header>*, main{
-    padding: 0 200px;
+    padding: 0 150px;
 }
 header{
-    min-height: 200px;
+    height: 150px;
     width: 100%;
     background-color: var(--main-color-dark);
+}
+header>a{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+.logo{
+    height: 80px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px black;
+
+}
+
+h1{
+    color: white;
+    padding: 0 30px;
+
 }
 
 .selector{
     display:flex;
     flex-wrap: false;
+    
 }
 .selector>div{
     width: 33%;
-    padding: 0 40px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
+    background-color: var(--main-color-dark);
+    padding: 10px;
+    box-shadow: 2px 2px 4px #040404;
+
+}
+.selector>div:not(:first-child){
+    margin-left:40px;
+
 }
 .selector>div>*{
-        display: block; 
-        margin: 20px auto;
-        width: 100%;
-        text-align: center;
+    display: block; 
+    margin: 20px auto;
+    width: 100%;
+    text-align: center;
+    object-fit: contain;
 }
 
 .selector>div:hover{
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-bottom: 5px;
+
 }
 
+.selector img{
+    min-width: 20px;
+    width: 200px;
+    max-width: 100%;
+    height: auto;
+    padding: 15px;
+    object-fit: contain;
+}
+
+.selector p{
+    height: 130px;
+    line-height: 22px;
+    font-size: 18px;
+}
+.selector h2{
+    font-size: 28px;
+}
 .button{
     width: 50% !important;
     padding: 5px;
@@ -51,6 +98,10 @@ header{
     border-radius: 5px;
     border-width: 3px;
 }
+.button:hover{
+    filter:brightness(0.9);
+}
+
 
 
 
