--- a/style.css
+++ b/style.css
@@ -102,7 +102,11 @@ h1{
     filter:brightness(0.9);
 }
 
-
+@media only screen and (max-width: 1150px) {
+    .selector{
+        flex-direction: column;
+    }
+  }
 
 
 
