--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+.btn {
+  background-color: #e67e22 !important;
+  border-width: 0px !important;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+main {
+  padding-left: 10% !important;
+  padding-right: 10% !important;
+}
+
+.card {
+  background-color: #414549 !important;
+  border-radius: 20px !important;
+  border-style: none;
+}
+
+.card-img-top {
+  border-top-left-radius: 20px !important;
+  border-top-right-radius: 20px !important;
+}
+
+.card-text, .card-title {
+  padding-left: 8% !important;
+  padding-right: 8% !important;
+}
+
+#IP {
+  min-width: 200px;
+}
+
+/*
 :root{
     --main-color: #4C4C47;
     --main-color-dark: #2D2D2A;
@@ -59,10 +93,10 @@ h1{
     padding: 40px;
     transition-duration: 250ms;
 }
-/* .selector>div:not(:first-child){ //wtf is this
+.selector>div:not(:first-child){ //wtf is this
     margin-left:40px;
 
-} */
+}
 .selector>div>*{
     display: block; 
     margin: 20px auto;
@@ -111,4 +145,4 @@ h1{
   }
 
 
-
+*/
